# WafelNativeSynth

./: readme.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/wafelkertas/nativesynths/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_synth.cpp
app/src/main/java/com/wafelkertas/nativesynths/: MainActivity.kt  NativeSynthEngine.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wafelkertas/nativesynths/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
